--- a/home/home.html
+++ b/home/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <a href="home.css"></a>
+    <link rel="stylesheet" href="home.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Depologs home</title>
@@ -10,10 +10,13 @@
     <div id="menu">
         <button id="menu-button">Menú</button>
         <ul id="menu-list">
-            <li><a href="pages/home_pages.html">nuestros deportes</a></li>
-            <li><a href="pages/biblioteca_videso/home_videos.html">biblioteca de videos y fotos</a></li>
-            <li><a href="pages/deportes/home_deportes.html">Estadísticas</a></li>
+            <li><a href="pages\home_pages.html">nuestros deportes</a></li>
+            <li><a href="pages\biblioteca_videos\home_videos.html">biblioteca de videos y fotos</a></li>
+            <li><a href="pages\deportes\home_deportes.html">Estadísticas</a></li>
         </ul>
+    </div>
+    <div>
+        
     </div>
     <script src="home.js"></script>    
 </body>
