--- a/pages/home_pages.html
+++ b/pages/home_pages.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <link rel="stylesheet" href="home_pages.css">
     <link rel="stylesheet" href="botones.css">
@@ -38,7 +38,7 @@
                 deportes
             </p>
             <p class="para">
-                estadisticas 
+                nuestros deportes 
             </p>
             <button class="btn">Read more</button>
             </div>
@@ -94,7 +94,7 @@
         // Cambiar el texto inicial
         cambiarTexto();
 
-        // Establecer un intervalo para cambiar el texto cada 2 minutos
+        // Establecer un intervalo para cambiar el texto cada 30 segundos
         setInterval(cambiarTexto, 30000);
     </script>
 </body>
