cambios de estilos home pages

--- a/pages/home_pages.html
+++ b/pages/home_pages.html
@@ -10,13 +10,21 @@
     <style>
         body 
         {
-            background: #314755; /* Fallback color for old browsers */
+            background: #3ca0df; /* Fallback color for old browsers */
             background: -webkit-linear-gradient(to right, #2596ca, #13415e); /* Chrome 10-25, Safari 5.1-6 */
             background: linear-gradient(to right, #134964, #0e4058); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
         }
     </style>
 </head>
 <body>
+    <div>
+        <input type="checkbox" id="checkbox">
+        <label for="checkbox" class="toggle">
+            <div class="bars" id="bar1"></div>
+            <div class="bars" id="bar2"></div>
+            <div class="bars" id="bar3"></div>
+        </label>
+    </div>
     <div class="botonera">
         <button class="animated-button">
             <span>deportes</span>
