--- a/pages/home_pages.html
+++ b/pages/home_pages.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="home_pages.css">
     <link rel="stylesheet" href="botones.css">
     <link rel="stylesheet" href="cartas_de_presentacion.css">
+    <link rel="stylesheet" href="menu.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>depologs secciones</title>
@@ -18,12 +19,16 @@
 </head>
 <body>
     <div>
-        <input type="checkbox" id="checkbox">
-        <label for="checkbox" class="toggle">
-            <div class="bars" id="bar1"></div>
-            <div class="bars" id="bar2"></div>
-            <div class="bars" id="bar3"></div>
-        </label>
+        <button class="btn">
+            <span class="icon">
+                <svg viewBox="0 0 175 80" width="40" height="40">
+                    <rect width="80" height="15" fill="#f0f0f0" rx="10"></rect>
+                    <rect y="30" width="80" height="15" fill="#f0f0f0" rx="10"></rect>
+                    <rect y="60" width="80" height="15" fill="#f0f0f0" rx="10"></rect>
+                </svg>
+            </span>
+            <span class="text">MENU</span>
+        </button>
     </div>
     <div class="botonera">
         <button class="animated-button">
