--- a/home/home.html
+++ b/home/home.html
@@ -7,15 +7,18 @@
     <title>Depologs home</title>
 </head>
 <body>
-    <div id="menu">
-        <button id="menu-button">Menú</button>
-        <ul id="menu-list">
-            <li><a href="pages\home_pages.html">nuestros deportes</a></li>
-            <li><a href="pages\biblioteca_videos\home_videos.html">biblioteca de videos y fotos</a></li>
-            <li><a href="pages\deportes\home_deportes.html">Estadísticas</a></li>
-        </ul>
-    </div>
     <div>
+        <button class="btn">
+            <span class="icon">
+                <svg viewBox="0 0 175 80" width="40" height="40">
+                    <rect width="80" height="15" fill="#f0f0f0" rx="10"></rect>
+                    <rect y="30" width="80" height="15" fill="#f0f0f0" rx="10"></rect>
+                    <rect y="60" width="80" height="15" fill="#f0f0f0" rx="10"></rect>
+                </svg>
+            </span>
+            <span class="text">MENU</span>
+        </button>
+    </div>
         
     </div>
     <script src="home.js"></script>    
