--- a/pages/home_pages.html
+++ b/pages/home_pages.html
@@ -18,18 +18,6 @@
     </style>
 </head>
 <body>
-    <div>
-        <button class="btn">
-            <span class="icon">
-                <svg viewBox="0 0 175 80" width="40" height="40">
-                    <rect width="80" height="15" fill="#f0f0f0" rx="10"></rect>
-                    <rect y="30" width="80" height="15" fill="#f0f0f0" rx="10"></rect>
-                    <rect y="60" width="80" height="15" fill="#f0f0f0" rx="10"></rect>
-                </svg>
-            </span>
-            <span class="text">MENU</span>
-        </button>
-    </div>
     <div class="botonera">
         <button class="animated-button">
             <span>deportes</span>
@@ -94,7 +82,7 @@
 
     <script>
         // Array de textos que quieres mostrar
-        const textos = ["tus papas son primos", "los perros pueden ladrar pero no maullar", "esternocleidomastoideo", "tus perros tienen 4 patas"];
+        const textos = ["tus papas son primos", "los perros pueden ladrar pero no maullar", "esternocleidomastoideo", "tus perros tienen 4 patas", "a manu le gustan los pitos negros"];
         let currentIndex = 0;
 
         // Función para cambiar el texto cada 2 minutos (120,000 milisegundos)
@@ -108,7 +96,7 @@
         cambiarTexto();
 
         // Establecer un intervalo para cambiar el texto cada 30 segundos
-        setInterval(cambiarTexto, 30000);
+        setInterval(cambiarTexto, 10000);
     </script>
 </body>
 </html>
