--- a/pages/home_pages.html
+++ b/pages/home_pages.html
@@ -34,79 +34,94 @@
     </div>
     <div class="cartaspresentacion">
         <div class="card">
-            <div class="content">
-            <p class="heading">
-                futbol
-            </p>
-            <p class="para">
-                es el fulbo 
-            </p>
-            <button class="btn">Read more</button>
+            <div>
+                <div class="content">
+                    <p class="heading">
+                        futbol
+                    </p>
+                    <p class="para">
+                        es el fulbo 
+                    </p>
+                    <button class="btn">Read more</button>
+                </div>
             </div>
         </div>
         <div class="card">
-            <div class="content">
-            <p class="heading">
-                balon mano
-            </p>
-            <p class="para">
-                esto es balon mano
-            </p>
-            <button class="btn">Read more</button>
+            <div>
+                <div class="content">
+                <p class="heading">
+                    balon mano
+                </p>
+                <p class="para">
+                    esto es balon mano
+                </p>
+                <button class="btn">Read more</button>
+                </div>
             </div>
         </div>
         <div class="card">
-            <div class="content">
-            <p class="heading">basketball
-            </p>
-            <p class="para">
-                esto es basket ball
-            </p>
-            <button class="btn">Read more</button>
+            <div>
+                <div class="content">
+                <p class="heading">basketball
+                </p>
+                <p class="para">
+                    esto es basket ball
+                </p>
+                <button class="btn">Read more</button>
+                </div>
             </div>
         </div>
         <div class="card">
-            <div class="content">
-            <p class="heading">
-                tenis
-            </p>
-            <p class="para">
-                nuestros deportes 
-            </p>
-            <button class="btn">Read more</button>
+            <div class="fotos">
+                <div class="content">
+                <p class="heading">
+                    tenis
+                </p>
+                <p class="para">
+                    nuestros deportes 
+                </p>
+                <button class="btn">Read more</button>
+                </div>
+            </div>
+        </div>
+            <div class="card">
+                <div class="fotos">
+                    <div class="content">
+                    <p class="heading">
+                        batmington
+                    </p>
+                    <p class="para">
+                        nuestros deportes 
+                    </p>
+                    <button class="btn">Read more</button>
+                </div>
             </div>
         </div>
         <div class="card">
-            <div class="content">
-            <p class="heading">
-                batmington
-            </p>
-            <p class="para">
-                nuestros deportes 
-            </p>
-            <button class="btn">Read more</button>
+            <div class="fotos">
+                <div class="content">
+                <p class="heading">
+                    voley
+                </p>
+                <p class="para">
+                    nuestros deportes 
+                </p>
+                <button class="btn">Read more</button>
+                </div>
             </div>
         </div>
         <div class="card">
-            <div class="content">
-            <p class="heading">
-                voley
-            </p>
-            <p class="para">
-                nuestros deportes 
-            </p>
-            <button class="btn">Read more</button>
-            </div>
-        </div>
-        <div class="card">
-            <div class="content">
-            <p class="heading">
-                f1
-            </p>
-            <p class="para">
-                nuestros deportes 
-            </p>
-            <button class="btn">Read more</button>
+            <div class="fotos">
+                <img src="" alt="" width="" height="">
+                <div class="content">
+                <p class="heading">
+                    f1
+                </p>
+                <p class="para">
+                    nuestros deportes 
+                </p>
+                <button class="btn">Read more</button>
+                </div>
             </div>
         </div>
     </div>
@@ -127,7 +142,8 @@
     
     <script>
         // Array de textos que quieres mostrar
-        const textos = ["tus papas son primos", "los perros pueden ladrar pero no maullar", "esternocleidomastoideo", "tus perros tienen 4 patas", "a manu le gustan los pitos negros"];
+        const textos = ["EL FUTBOL SE JUEGA CON UNA PEROTA", "LA FORMULA 1 ES LA MAXIMA CATEGORIA DEL AUTOMIVILISMO",
+        "A LUCAS LE GUSTA EL PENE ", "EL PAN ESTA SOBREVALORADO"];
         let currentIndex = 0;
 
         // Función para cambiar el texto cada 2 minutos (120,000 milisegundos)
