pruebas fail de imagenes

--- a/pages/home_pages.html
+++ b/pages/home_pages.html
@@ -33,16 +33,18 @@
         </button>
     </div>
     <div class="cartaspresentacion">
-        <div class="card">
-            <div>
-                <div class="content">
-                    <p class="heading">
-                        futbol
-                    </p>
-                    <p class="para">
-                        es el fulbo 
-                    </p>
-                    <button class="btn">Read more</button>
+        <div class=""> 
+            <div class="card">
+                <div>
+                    <div class="content">
+                        <p class="heading">
+                            futbol
+                        </p>
+                        <p class="para">
+                            es el fulbo 
+                        </p>
+                        <button class="btn">Read more</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -112,7 +114,6 @@
         </div>
         <div class="card">
             <div class="fotos">
-                <img src="" alt="" width="" height="">
                 <div class="content">
                 <p class="heading">
                     f1
