--- a/pages/deportes/home_deportes.html
+++ b/pages/deportes/home_deportes.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="home_deportes.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>depologs secciones</title>
+    <title>Depologs Deportes</title>
     <style>
         body 
         {
