--- a/pages/home_pages.html
+++ b/pages/home_pages.html
@@ -33,18 +33,16 @@
         </button>
     </div>
     <div class="cartaspresentacion">
-        <div class=""> 
-            <div class="card">
-                <div>
-                    <div class="content">
-                        <p class="heading">
-                            futbol
-                        </p>
-                        <p class="para">
-                            es el fulbo 
-                        </p>
-                        <button class="btn">Read more</button>
-                    </div>
+        <div class="card">
+            <div>
+                <div class="content">
+                    <p class="heading">
+                        FUTBOL
+                    </p>
+                    <p class="para">
+                        es el fulbo 
+                    </p>
+                    <button class="btn">Read more</button>
                 </div>
             </div>
         </div>
@@ -52,7 +50,7 @@
             <div>
                 <div class="content">
                 <p class="heading">
-                    balon mano
+                    BALON MANO
                 </p>
                 <p class="para">
                     esto es balon mano
@@ -64,7 +62,8 @@
         <div class="card">
             <div>
                 <div class="content">
-                <p class="heading">basketball
+                <p class="heading">
+                    BATMINGTON
                 </p>
                 <p class="para">
                     esto es basket ball
@@ -77,7 +76,7 @@
             <div class="fotos">
                 <div class="content">
                 <p class="heading">
-                    tenis
+                    BASEBALL
                 </p>
                 <p class="para">
                     nuestros deportes 
@@ -90,7 +89,7 @@
                 <div class="fotos">
                     <div class="content">
                     <p class="heading">
-                        batmington
+                        TENIS
                     </p>
                     <p class="para">
                         nuestros deportes 
@@ -103,7 +102,7 @@
             <div class="fotos">
                 <div class="content">
                 <p class="heading">
-                    voley
+                    VOLEY
                 </p>
                 <p class="para">
                     nuestros deportes 
@@ -113,15 +112,41 @@
             </div>
         </div>
         <div class="card">
+            <div>
+                <div class="content">
+                    <p class="heading">
+                        ESPORT COUNTER STRIKE
+                    </p>
+                    <p class="para">
+                        es el fulbo 
+                    </p>
+                    <button class="btn">Read more</button>
+                </div>
+            </div>
+        </div>
+        <div class="card">
             <div class="fotos">
                 <div class="content">
                 <p class="heading">
-                    f1
+                    F1
                 </p>
                 <p class="para">
                     nuestros deportes 
                 </p>
                 <button class="btn">Read more</button>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div>
+                <div class="content">
+                    <p class="heading">
+                        ESPORT VALORANT
+                    </p>
+                    <p class="para">
+                        es el fulbo 
+                    </p>
+                    <button class="btn">Read more</button>
                 </div>
             </div>
         </div>
@@ -144,10 +169,10 @@
     <script>
         // Array de textos que quieres mostrar
         const textos = ["EL FUTBOL SE JUEGA CON UNA PEROTA", "LA FORMULA 1 ES LA MAXIMA CATEGORIA DEL AUTOMIVILISMO",
-        "A LUCAS LE GUSTA EL PENE ", "EL PAN ESTA SOBREVALORADO"];
+        "EL VOLEY TIENE UNA RED PARA DIVIDIR LA CANCHA", "EL PAN ESTA SOBREVALORADO"];
         let currentIndex = 0;
 
-        // Función para cambiar el texto cada 2 minutos (120,000 milisegundos)
+        // Función para cambiar el texto cada 10 segundos (10000 milisegundos)
         function cambiarTexto() {
             currentIndex = (currentIndex + 1) % textos.length;
             const elementoTexto = document.getElementById("textoCambiante");
@@ -157,7 +182,7 @@
         // Cambiar el texto inicial
         cambiarTexto();
 
-        // Establecer un intervalo para cambiar el texto cada 30 segundos
+        // Establecer un intervalo para cambiar el texto cada 10 segundos
         setInterval(cambiarTexto, 10000);
     </script>
 </body>
