interconecxion de pages

--- a/pages/deportes/home_deportes.html
+++ b/pages/deportes/home_deportes.html
@@ -2,6 +2,8 @@
 <html lang="es">
 <head>
     <link rel="stylesheet" href="home_deportes.css">
+    <link rel="import" href="pages\home_pages.html">
+    lin
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Depologs Deportes</title>
@@ -16,16 +18,16 @@
 </head>
 <body>
     <div class="botonera">
-        <button class="animated-button">
-            <span>deportes</span>
+        <button class="animated-button" onclick="window.location.href = '../home_pages.html'">
+            <span>ATRAS</span>
             <span></span>
         </button>
-        <button class="animated-button">
-            <span>biblioteca</span>
+        <button class="animated-button" onclick="window.location.href='../biblioteca_videos/home_videos.html'">
+            <span>BIBLIOTECA</span>
             <span></span>
         </button>
-        <button class="animated-button">
-            <span>estadisticas</span>
+        <button class="animated-button" onclick="window.location.href='../estadisticas/home_estadisticas.html'">
+            <span>ESTADISTICAS</span>
             <span></span>
         </button>
     </div>
