--- a/pages/estadisticas/home_estadisticas.html
+++ b/pages/estadisticas/home_estadisticas.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <link rel="stylesheet" href="home_videos.css">
+    <link rel="stylesheet" href="home_estadisticas.css">
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,8 +25,8 @@
             <span>DEPORTES</span>
             <span></span>
         </button>
-        <button class="animated-button" onclick="window.location.href = '../estadisticas/home_estadisticas.html'">
-            <span>ESTADISTICAS</span>
+        <button class="animated-button" onclick="window.location.href = '../biblioteca_videos/home_videos.html'">
+            <span>BIBLIOTECA</span>
             <span></span>
         </button>
     </div>
@@ -47,8 +47,8 @@
     
     <script>
         // Array de textos que quieres mostrar
-        const textos = ["EL FUTBOL SE JUEGA CON UNA PEROTA", "LA FORMULA 1 ES LA MAXIMA CATEGORIA DEL AUTOMIVILISMO",
-        "A LUCAS LE GUSTA EL PENE ", "EL PAN ESTA SOBREVALORADO"];
+        const textos = ["ESTA NO ES UNA PAGINA DE APUESTAS, PERO APOSTAMOS POR TU INTERES", "ESTADISTICAMENTE HABLANDO ESTAS EN EL LUGAR CORRECTO",
+        "ESTAMOS 90% SEGUROS DE QUE NOS ELEGIS SIEMPRE Y UN 10% LO SABEMOS", "LOS ESTADISTICAS ME DICTAN QUE ESTAS HACIENDO LAS COSAS BIEN"];
         let currentIndex = 0;
 
         // Función para cambiar el texto cada 2 minutos (120,000 milisegundos)
