--- a/pages/biblioteca_videos/home_videos.html
+++ b/pages/biblioteca_videos/home_videos.html
@@ -30,7 +30,9 @@
             <span></span>
         </button>
     </div>
-    
+    <div>
+        
+    </div>
     <div class="texto-cambiante">
         <div class="cardcambiante">
             <a class="card1" href="#">
