--- a/pages/home_pages.html
+++ b/pages/home_pages.html
@@ -12,6 +12,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>depologs secciones</title>
+    <!--estilos de la pagina-->
     <style>
         body 
         {
@@ -22,6 +23,7 @@
     </style>
 </head>
 <body>
+    <!--botones de la parte superior-->
     <div class="botonera">
         <button class="animated-button" onclick="window.location.href='deportes/home_deportes.html'">
             <span>DEPORTES</span>
@@ -36,100 +38,111 @@
             <span></span>
         </button>
     </div>
+    <!--cartas de presentacion de los deportes-->
     <div class="cartaspresentacion">
         <div class="card">
-            <div>
+            <div class="futbol">
                 <div class="content">
                     <p class="heading">
                         FUTBOL
                     </p>
                     <p class="para">
-                        es el fulbo 
+                        El fútbol, futbol​ o balompié​ es un deporte de equipo jugado entre dos conjuntos de once jugadores cada uno, 
+                        mientras los árbitros se ocupan de que las normas se cumplan correctamente. 
+                        Es, ampliamente, considerado el deporte más popular del mundo, pues lo practican unas 270 millones de personas. 
                     </p>
-                    <button class="btn">Read more</button>
+                    <button class="btn">llevame a futbol</button>
                 </div>
             </div>
         </div>
         <div class="card">
-            <div>
+            <div class="handball">
                 <div class="content">
                 <p class="heading">
-                    BALON MANO
+                    HANDBALL
                 </p>
                 <p class="para">
-                    esto es balon mano
+                    El balonmano, hándbol o handball, 
+                    es un deporte de pelota en el que se enfrentan dos equipos y se caracteriza por transportar la pelota con las manos.
                 </p>
-                <button class="btn">Read more</button>
+                <button class="btn">llevame a handball</button>
                 </div>
             </div>
         </div>
         <div class="card">
-            <div>
+            <div class="badminton">
                 <div class="content">
                 <p class="heading">
-                    BATMINGTON
+                    BADMINTON
                 </p>
                 <p class="para">
-                    esto es basket ball
+                    El bádminton es un deporte de raqueta en el que se enfrentan dos jugadores o dos parejas situadas en las mitades opuestas de una pista rectangular dividida por una red.
+                     A diferencia de otros deportes de raqueta en el bádminton no se juega con pelota, sino con un volante.
                 </p>
-                <button class="btn">Read more</button>
+                <button class="btn">llevame a badminton</button>
                 </div>
             </div>
         </div>
         <div class="card">
-            <div class="fotos">
+            <div class="baseball">
                 <div class="content">
                 <p class="heading">
                     BASEBALL
                 </p>
                 <p class="para">
-                    nuestros deportes 
+                    El béisbol​, también llamado baseball o juego de pelota es un deporte de equipo jugado por dos equipos de nueve jugadores cada uno. 
                 </p>
-                <button class="btn">Read more</button>
+                <button class="btn">llevame a baseball</button>
                 </div>
             </div>
         </div>
             <div class="card">
-                <div class="fotos">
+                <div class="tenis">
                     <div class="content">
                     <p class="heading">
                         TENIS
                     </p>
                     <p class="para">
-                        nuestros deportes 
+                        Deporte que se practica entre dos jugadores o dos parejas en una pista rectangular dividida transversalmente por una red;
+                         consiste en impulsar una pelota con una raqueta por encima de la red intentando que bote en el campo contrario y que el adversario no la pueda devolver;
+                         los partidos se disputan a tres o cinco sets siguiendo un complejo sistema de puntuación. 
                     </p>
-                    <button class="btn">Read more</button>
+                    <button class="btn">llevame a tenis</button>
                 </div>
             </div>
         </div>
         <div class="card">
-            <div class="fotos">
+            <div class="voley">
                 <div class="content">
                 <p class="heading">
                     VOLEY
                 </p>
                 <p class="para">
-                    nuestros deportes 
+                    El voleibol, vóleibol, volibol, vólibol, balonvolea o simplemente vóley ​ es un deporte que se juega con una pelota y en el que dos equipos, 
+                    integrados por seis jugadores cada uno, 
+                    se enfrentan sobre una área de juego separada por una red central. 
                 </p>
-                <button class="btn">Read more</button>
+                <button class="btn">llevame a voley</button>
                 </div>
             </div>
         </div>
         <div class="card">
-            <div>
+            <div class="strike">
                 <div class="content">
                     <p class="heading">
                         ESPORT COUNTER STRIKE
                     </p>
                     <p class="para">
-                        es el fulbo 
+                        Counter-Strike es una serie de videojuegos tácticos multijugador de disparos en primera persona en los que equipos de terroristas luchan 
+                        para perpetrar un acto de terror mientras que los contraterroristas intentan prevenirlo. La serie comenzó en Windows en 1999 con el lanzamiento del primer juego, 
+                        Counter-Strike. 
                     </p>
-                    <button class="btn">Read more</button>
+                    <button class="btn">llevame a counter strike</button>
                 </div>
             </div>
         </div>
         <div class="card">
-            <div class="">
+            <div class="f1">
                 <div class="content">
                 <p class="heading">
                     F1
@@ -139,30 +152,33 @@
                     es la principal competición de automovilismo internacional y el campeonato de deportes de motor más popular y prestigioso del mundo. 
                     La entidad que la dirige es la Federación Internacional del Automóvil.
                 </p>
-                <button class="btn">Read more</button>
+                <button class="btn">llevame a f1</button>
                 </div>
             </div>
         </div>
         <div class="card">
-            <div>
+            <div class="valorant">
                 <div class="content">
                     <p class="heading">
                         ESPORT VALORANT
                     </p>
                     <p class="para">
-                        es el fulbo 
+                        Valorant es un hero shooter en primera persona multijugador gratuito desarrollado y publicado por Riot Games. 
+                        El juego se anunció por primera vez con el nombre en clave Project A en octubre de 2019. 
+                        Fue lanzado para Microsoft Windows el 2 de junio de 2020 después de su beta cerrada lanzada el 7 de abril de 2020.
                     </p>
-                    <button class="btn">Read more</button>
+                    <button class="btn">llevame a valorant</button>
                 </div>
             </div>
         </div>
     </div>
-    
+    <!--texto que cambia cada 10 segundos-->
     <div class="texto-cambiante">
         <div class="cardcambiante">
             <a class="card1" href="#">
              <p id="textoCambiante">Texto 1</p>
              <div class="go-corner" href="#">
+                <!--este div sirve para poder poner algún caracter en la parte superior del estilo-->
                <div class="go-arrow">
                  
                </div>
