--- a/pages/biblioteca_videos/home_videos.html
+++ b/pages/biblioteca_videos/home_videos.html
@@ -46,6 +46,12 @@
          </div>
         
     </div>
+    <div>
+        <button class="animated-button" onclick="window.location.href = '../home_pages.html'">
+            <span>ATRAS</span>
+            <span></span>
+        </button>
+    </div>
     
     <script>
         // Array de textos que quieres mostrar
