--- a/pages/home_pages.html
+++ b/pages/home_pages.html
@@ -25,6 +25,7 @@
 <body>
     <!--botones de la parte superior-->
     <div class="botonera">
+        <!--botones con estilo-->
         <button class="animated-button" onclick="window.location.href='deportes/home_deportes.html'">
             <span>DEPORTES</span>
             <span></span>
@@ -40,7 +41,9 @@
     </div>
     <!--cartas de presentacion de los deportes-->
     <div class="cartaspresentacion">
+        <!--estas son las cartas que de ven separadas-->
         <div class="card">
+            <!--este divi sirve para poner una imagen de fondo-->
             <div class="futbol">
                 <div class="content">
                     <p class="heading">
