--- a/pages/deportes/tenis/tenis_home.html
+++ b/pages/deportes/tenis/tenis_home.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div class="botonera">
-        <button class="animated-button" onclick="window.location.href = '../deportes/home_deportes.html'">
+        <button class="animated-button" onclick="window.location.href = '../home_deportes.html'">
             <span>DEPORTES</span>
             <span></span>
         </button>
