--- a/pages/deportes/f1/tabla de puntos/puntos_pilotos.html
+++ b/pages/deportes/f1/tabla de puntos/puntos_pilotos.html
@@ -1,16 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="tabla_de_puntos.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tabla de Puntos</title>
     <style>
-        body{
-            background-color: beige;
+        body 
+        {
+            background: #3ca0df; /* Fallback color for old browsers */
+            background: -webkit-linear-gradient(to right, #2596ca, #13415e); /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(to right, #d82020, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
         }
     </style>
 </head>
 <body>
-    
+    <div class="tabladepuntos">
+        <table border="1">
+            <thead>
+                <tr>
+                    <th>PILOTO</th>
+                    <th>PUNTOS</th>
+                    <th>TRIUNFOS</th>
+                    <th>PODIOS</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>M.Verstappen</td>
+                    <td>374</td>
+                    <td>12</td>
+                    <td>14</td>
+                </tr>
+                <tr>
+                    <td>S.Perez</td>
+                    <td>223</td>
+                    <td>2</td>
+                    <td>8</td>
+                </tr>
+                <tr>
+                    <td>L.Hamilton</td>
+                    <td>180</td>
+                    <td>0</td>
+                    <td>5</td>
+                </tr>
+                <tr>
+                    <td>F.Alonso</td>
+                    <td>170</td>
+                    <td>0</td>
+                    <td>7</td>
+                </tr>
+                <tr>
+                    <td>C.Sainz Jr</td>
+                    <td>142</td>
+                    <td>1</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td>C.Leclerc</td>
+                    <td>123</td>
+                    <td>0</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>G.Russell</td>
+                    <td>109</td>
+                    <td>0</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                   <td>L.Norris</td>
+                   <td>97</td>
+                   <td>0</td>
+                   <td>3</td> 
+                </tr>
+                <tr>
+                    <td>L.Stroll</td>
+                    <td>47</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td>P.Gasly</td>
+                    <td>45</td>
+                    <td>0</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>O.Piastri</td>
+                    <td>42</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td>E.Ocon</td>
+                    <td>36</td>
+                    <td>0</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>A.Albon</td>
+                    <td>21</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td>N.Hulkenberg</td>
+                    <td>9</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td>V.Bottas</td>
+                    <td>6</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td>G.Zhou</td>
+                    <td>4</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td>Y.Tsunoda</td>
+                    <td>3</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td>K.Magnussen</td>
+                    <td>3</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td>L.Lawson</td>
+                    <td>2</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td>L.Sargeant</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td>N.De Vries</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td>D.Ricciardo</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
