--- a/pages/deportes/f1/home_f1.html
+++ b/pages/deportes/f1/home_f1.html
@@ -16,9 +16,10 @@
     <style>
         body 
         {
-            background: #3ca0df; /* Fallback color for old browsers */
-            background: -webkit-linear-gradient(to right, #2596ca, #13415e); /* Chrome 10-25, Safari 5.1-6 */
-            background: linear-gradient(to right, #2596ca, #13415e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+            background-image: url('1214052.png'); /* Reemplaza 'tu-imagen.jpg' con la URL de tu imagen */
+            background-size: cover; /* Ajusta la imagen al tamaño de la ventana del navegador */
+            background-repeat: no-repeat; /* Evita que la imagen se repita */
+            background-attachment: fixed;
         }
     </style>
 </head>
@@ -106,7 +107,7 @@
         <div class="textosinfo">
             <div class="puntos" id="puntos">
                 <p style="font-family: Bebas Neue, sans-serif;">TABLA DE PUNTOS DE CONTRUCTORES Y PILOTOS</p>
-                <iframe src="tabla de puntos/puntos_pilotos.html" frameborder="0"></iframe>
+                <iframe src="tabla de puntos/puntos_pilotos.html" frameborder="0" height="580" width="350"></iframe>
             </div>
             <div class="pilotos" id="pilotos">
                 <p style="font-family: Bebas Neue, sans-serif;">PILOTOS DE LA FORMULA 1</p>
