--- a/pages/deportes/f1/tabla de puntos/home_puntos.html
+++ b/pages/deportes/f1/tabla de puntos/home_puntos.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="home_puntos.css">
     <link rel="stylesheet" href="tabla_de_puntos.css">
+    <link rel="stylesheet" href="home_puntos.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabla de Puntos</title>
+    <title>Document</title>
     <style>
         body 
         {
