--- a/pages/deportes/f1/tabla de puntos/puntos_constructores.html
+++ b/pages/deportes/f1/tabla de puntos/puntos_constructores.html
@@ -32,10 +32,9 @@
                 <tr>
                     <th>PAIS</th>
                     <th>POSICIONES</th>
-                    <th>PILOTO</th>
+                    <th>PILOTOS</th>
                     <th>PUNTOS</th>
                     <th>TRIUNFOS</th>
-                    <th>PODIOS</th>
                 </tr>
             </thead>
             <tbody>
