modificaciones de pilotos

--- a/pages/deportes/f1/home_f1.html
+++ b/pages/deportes/f1/home_f1.html
@@ -16,7 +16,7 @@
     <style>
         body 
         {
-            background-image: url('f1-22-4k-v3.jpg'); /* Reemplaza 'tu-imagen.jpg' con la URL de tu imagen */
+            background-image: url('f1blancoyautos.jpg'); /* Reemplaza 'tu-imagen.jpg' con la URL de tu imagen */
             background-size: cover; /* Ajusta la imagen al tamaño de la ventana del navegador */
             background-repeat: no-repeat; /* Evita que la imagen se repita */
             background-attachment: fixed;
@@ -99,10 +99,11 @@
         <div class="textosinfo">
             <div class="puntos" id="puntos">
                 <p style="font-family: Bebas Neue, sans-serif;">TABLA DE PUNTOS DE CONTRUCTORES Y PILOTOS</p>
-                <iframe src="tabla de puntos/home_puntos.html" frameborder="0" height="950" width="600"></iframe>
+                <iframe src="tabla de puntos/home_puntos.html" frameborder="0" height="1050" width="600"></iframe>
             </div>
             <div class="pilotos" id="pilotos">
                 <p style="font-family: Bebas Neue, sans-serif;">PILOTOS DE LA FORMULA 1</p>
+                <iframe src="pilotos/home_pilotos.html" frameborder="0" height="2600" width="1300"></iframe>
             </div>
             <div class="fechas" id="fechas">
                 <p style="font-family: Bebas Neue, sans-serif;">FECHAS</p>
