--- a/pages/deportes/f1/tabla de puntos/home_puntos.html
+++ b/pages/deportes/f1/tabla de puntos/home_puntos.html
@@ -13,6 +13,20 @@
             background: -webkit-linear-gradient(to right, #2596ca, #13415e); /* Chrome 10-25, Safari 5.1-6 */
             background: linear-gradient(to right, #8a3030, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
         }
+        table {
+            font-family: Bebas Neue, sans-serif; /* Cambia "Arial" a la fuente que desees */
+            font-size: 14px; /* Cambia el tamaño de fuente si es necesario */
+        }
+
+        /* Estilo para cambiar el tamaño de fuente de las celdas de encabezado */
+        th {
+            font-size: 16px; /* Cambia el tamaño de fuente de los encabezados si es necesario */
+        }
+
+        /* Estilo para cambiar el tamaño de fuente de las celdas de datos */
+        td {
+            font-size: 14px; /* Cambia el tamaño de fuente de los datos si es necesario */
+        }
     </style>
 </head>
 <body>
