--- a/pages/deportes/f1/tabla de puntos/puntos_pilotos.html
+++ b/pages/deportes/f1/tabla de puntos/puntos_pilotos.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" href="home_puntos.css">
     <link rel="stylesheet" href="tabla_de_puntos.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bebas Neues">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabla de Puntos</title>
@@ -12,6 +13,22 @@
             background: #3ca0df; /* Fallback color for old browsers */
             background: -webkit-linear-gradient(to right, #2596ca, #13415e); /* Chrome 10-25, Safari 5.1-6 */
             background: linear-gradient(to right, #8a3030, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        }
+        table {
+            font-family: Bebas Neue, sans-serif; /* Cambia "Bebas Neue" a la fuente que desees */
+            font-size: 14px; /* Cambia el tamaño de fuente si es necesario */
+        }
+
+        /* Estilo para cambiar el tamaño de fuente de las celdas de encabezado */
+        th {
+            font-family: Bebas Neue, sans-serif; /* Cambia "Bebas Neue" a la fuente que desees */
+            font-size: 16px; /* Cambia el tamaño de fuente de los encabezados si es necesario */
+        }
+
+        /* Estilo para cambiar el tamaño de fuente de las celdas de datos */
+        td {
+            font-family: Bebas Neue, sans-serif; /* Cambia "Bebas Neue" a la fuente que desees */
+            font-size: 14px; /* Cambia el tamaño de fuente de los datos si es necesario */
         }
     </style>
 </head>
