--- a/pages/deportes/f1/home_f1.html
+++ b/pages/deportes/f1/home_f1.html
@@ -16,6 +16,18 @@
     <style>
         body 
         {
+            @media screen and (max-width: 768px) {
+        /* Estilos para pantallas más pequeñas (por ejemplo, teléfonos) */
+        }
+
+        @media screen and (min-width: 769px) and (max-width: 1024px) {
+        /* Estilos para tabletas */
+        }
+
+        @media screen and (min-width: 1025px) {
+        /* Estilos para pantallas más grandes (por ejemplo, computadoras de escritorio) */
+        }
+
             background-image: url('f1blancoyautos.jpg'); /* Reemplaza 'tu-imagen.jpg' con la URL de tu imagen */
             background-size: cover; /* Ajusta la imagen al tamaño de la ventana del navegador */
             background-repeat: no-repeat; /* Evita que la imagen se repita */
@@ -103,7 +115,7 @@
             </div>
             <div class="pilotos" id="pilotos">
                 <p style="font-family: Bebas Neue, sans-serif;">PILOTOS DE LA FORMULA 1</p>
-                <iframe src="pilotos/home_pilotos.html" frameborder="0" height="2600" width="1300"></iframe>
+                <iframe src="pilotos/home_pilotos.html" frameborder="0" height="3550" width="1100"></iframe>
             </div>
             <div class="fechas" id="fechas">
                 <p style="font-family: Bebas Neue, sans-serif;">FECHAS</p>
