modificaciones en f1 home

--- a/pages/deportes/f1/home_f1.html
+++ b/pages/deportes/f1/home_f1.html
@@ -110,18 +110,34 @@
     <div class="contprincipal">
         <div class="textosinfo">
             <div class="puntos" id="puntos">
-                <p style="font-family: Bebas Neue, sans-serif;">TABLA DE PUNTOS DE CONTRUCTORES Y PILOTOS</p>
-                <iframe src="tabla de puntos/home_puntos.html" frameborder="0" height="1050" width="600"></iframe>
+                <button class="titulo" >
+                    <p style="font-family: Bebas Neue, sans-serif;">TABLA DE PUNTOS DE CONTRUCTORES Y PILOTOS</p>
+                </button>
+                <div class="puntitos">
+                    <iframe src="tabla de puntos/home_puntos.html" frameborder="0" height="1050" width="600"></iframe>
+                </div>
             </div>
             <div class="pilotos" id="pilotos">
-                <p style="font-family: Bebas Neue, sans-serif;">PILOTOS DE LA FORMULA 1</p>
-                <iframe src="pilotos/home_pilotos.html" frameborder="0" height="3550" width="1100"></iframe>
+                <button class="titulo">
+                    <p style="font-family: Bebas Neue, sans-serif;">PILOTOS DE LA FORMULA 1</p>    
+                </button>
+                <div class="pilotitos">
+                    <iframe src="pilotos/home_pilotos.html" frameborder="0" height="3550" width="1100"></iframe>
+                </div>
             </div>
             <div class="fechas" id="fechas">
-                <p style="font-family: Bebas Neue, sans-serif;">FECHAS</p>
+                <button class="titulo">
+                    <p style="font-family: Bebas Neue, sans-serif;">FECHAS</p>
+                </button>
+                <div class="fechitas">
+                    <img src="calendario-2023-f1-819x1024.jpeg" alt="">
+                </div>
+                
             </div>
             <div class="gps" id="gps">
-                <p style="font-family: Bebas Neue, sans-serif;">GRAN PRIX</p>
+                <button class="titulo">
+                    <p style="font-family: Bebas Neue, sans-serif;">GRAN PRIX</p>
+                </button>
             </div>
         </div>
 
