--- a/pages/deportes/futbol/home_futbol.html
+++ b/pages/deportes/futbol/home_futbol.html
@@ -3,12 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FUTBOL</title>
+    <title>depologs_Futbol</title>
     <link rel="stylesheet" href="home_futbol.css">
+    <link rel="icon" type="imagen/png" href="./images/home_favicon.png"/>
 </head>
 <body>
-    
+    <h1>DEPOLOGS - FUTBOL</h1>
+    <div class="botonera">
+        <button class="animated-button" onclick="window.location.href = '../../home_pages.html'">
+            <span>ATRAS</span>
+            <span></span>
+        </button>
+        <button class="animated-button" onclick="window.location.href = '../home_deportes.html'">
+            <span>DEPORTES</span>
+            <span></span>
+        </button>
+        <button class="animated-button" onclick="window.location.href='../../biblioteca_videos/home_videos.html'">
+            <span>VIDEOTECA</span>
+            <span></span>
+        </button>
+        <button class="animated-button" onclick="window.location.href='../../estadisticas/home_estadisticas.html'">
+            <span>ESTADISTICAS</span>
+            <span></span>
+        </button>
+    </div>
 
+
+
+
+
+
+    
     <script src="home_futbol.js"></script>
 </body>
 </html>
