ingreso de info de grandes premios

--- a/pages/deportes/f1/home_f1.html
+++ b/pages/deportes/f1/home_f1.html
@@ -138,9 +138,49 @@
                 <button class="titulo">
                     <p style="font-family: Bebas Neue, sans-serif;">GRAN PRIX</p>
                 </button>
+                <div class="premio">
+                    <div class="titulopremio">
+                        <button class="titulo">
+                            <p style="font-family: Bebas Neue, sans-serif;">SAKHIR</p>
+                        </button>
+                    </div>
+                    <div class="imagenpremio">
+                        <img src="/pages/deportes/f1/gp/image.png" alt="">
+                    </div>
+                    <div class="infopremio">
+                        <button class="titulo">
+                            <p style="font-family: Bebas Neue, sans-serif;">El Gran Premio de Sakhir fue una carrera de automovilismo válida para el Campeonato Mundial de Fórmula 1 que se disputó con monoplazas en el Circuito 
+                            Internacional de Baréin, ubicado en la zona desértica de Sakhir, a aproximadamente 31 km de la capital Manama1​.
+                            Formó parte del calendario de la temporada 2020 debido a que el calendario original fue afectado por el inicio de la Pandemia de COVID-19, 
+                            dando lugar a la realización de nuevas carreras para poder completar la temporada. Fue confirmada en agosto de 2020, 
+                            junto a los Grandes Premios de Turquía, Baréin y Abu Dabi. Al igual que el Gran Premio de Baréin, este se corrió en el Circuito Internacional de Baréin, 
+                            con la diferencia de que en esta ocasión se utilizó la pista exterior del circuito.</p>
+                    </button>
+                    </div>
+                </div>
+                <div class="premio">
+                    <button class="titulo">
+                            <p style="font-family: Bebas Neue, sans-serif;">JEDDAH</p>
+                    </button>
+                    <div class="imagenpremio">
+                        <img src="/pages/deportes/f1/gp/jeddah.png" alt="">
+                    </div>
+                    <div class="infopremio">
+                        <button class="titulo">
+                            <p style="font-family: Bebas Neue, sans-serif;">El Gran Premio de Australia de 2023 fue la tercera ronda de la temporada 2023 de Fórmula 1. 
+                                Se disputó los días 31 de marzo, 1 y 2 de abril en el circuito de Albert Park,
+                                ubicado en Melbourne (Australia).​
+                                Fernando Alonso, Lewis Hamilton, Valtteri Bottas y Charles Leclerc son los únicos pilotos activos que lograron ganar en Australia.
+                                Max Verstappen fue el ganador de la carrera, seguido de Lewis Hamilton y Fernando Alonso.​ 
+                                La carrera terminó con el mayor número de banderas rojas, con tres.​ Adicionalmente,
+                                la colisión múltiple en la vuelta 57 está en el tercer puesto de colisiones múltiples de la curva 1, 
+                                siendo superado por la colisión múltiple de la versión de 2008 con 5 eliminados en colisión y por la de la versión de 2002, 
+                                en donde dejaron 8 pilotos eliminados.</p>
+                        </button>
+                    </div> 
+                </div>
             </div>
         </div>
-
         <div class="texto-cambiante">
             <div class="cardcambiante">
                 <a class="card1" href="#">
