disposicion de datos

--- a/pages/deportes/futbol/home_futbol.html
+++ b/pages/deportes/futbol/home_futbol.html
@@ -28,6 +28,21 @@
         </button>
     </div>
 
+    <div class="ligas">
+        <p>LAS LIGAS DE FUTBOL MAS IMPORTANTES DEL</p>
+          <ul>
+            <li>MUNDO</li>
+            <li>PLANETA</li>
+            <li>UNIVERSO</li>
+          </ul>
+  </div>
+
+  <div>
+    <img src="./images/escudos_ligas/LIGA PROFESIONAL DE FUTBOL/argentina2.png" alt="liga-argentina">
+
+  </div>
+
+    
 
 
 
